fix(category): optimize category item visible and hidden

--- a/source/css/layout/category-list.styl
+++ b/source/css/layout/category-list.styl
@@ -5,6 +5,7 @@
   .category-list-content {
 
     ul.all-category-list {
+      user-select none
 
       & > li.all-category-list-item {
         position relative
@@ -49,6 +50,7 @@
           height 0
           margin-left 1.6rem
           visibility hidden
+          overflow hidden
         }
       }
     }
